--- a/TensorBoard/Untitled2.ipynb
+++ b/TensorBoard/Untitled2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a87aaf43",
+   "execution_count": 2,
+   "id": "e8f67d6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,21 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d63e10f7",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 5,
+   "id": "ac986088",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-d782797641465130\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-2d6e6b4834b8ad80\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-d782797641465130\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-2d6e6b4834b8ad80\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -48,24 +46,14 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir logs\\\\fit\\\\20210530161046 --host localhost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "af582305",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %reload_ext tensorboard"
+    "%tensorboard --logdir logs"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
