--- a/YouTube/TF_MNIST_TensBoard.ipynb
+++ b/YouTube/TF_MNIST_TensBoard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ceece64",
+   "id": "fd26264d",
    "metadata": {},
    "source": [
     "# -*- coding: utf-8 -*-\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c3a15aef",
+   "id": "6ca9cf33",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98b32e05",
+   "id": "2c88a10b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3c9b5b57",
+   "id": "107571ed",
    "metadata": {},
    "outputs": [
     {
@@ -175,8 +175,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
