--- a/TensorBoard/Untitled.ipynb
+++ b/TensorBoard/Untitled.ipynb
@@ -2,29 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a693951d",
+   "execution_count": 8,
+   "id": "c395dc3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
    "source": [
+    "# \n",
+    "import tensorflow as tf\n",
+    "import datetime\n",
     "%load_ext tensorboard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0c0546a3",
+   "execution_count": 7,
+   "id": "83e34965",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-2002490920804079\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-773f7bbe52f80e0e\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-2002490920804079\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-773f7bbe52f80e0e\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -44,14 +56,14 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir logs\\\\fit\\\\20210530-143800 --host localhost"
+    "%tensorboard --logdir logs\\\\fit\\\\20210530161046"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
