--- a/TensorBoard/tensorboard1.ipynb
+++ b/TensorBoard/tensorboard1.ipynb
@@ -2,41 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "056c593a",
+   "execution_count": 2,
+   "id": "89d08ea1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# \n",
-    "import tensorflow as tf\n",
-    "import datetime\n",
     "%load_ext tensorboard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "37849d29",
+   "execution_count": 3,
+   "id": "2c281e96",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-773f7bbe52f80e0e\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-2002490920804079\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-773f7bbe52f80e0e\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-2002490920804079\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -56,14 +44,14 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir logs\\\\fit\\\\20210530161046"
+    "%tensorboard --logdir logs\\\\fit\\\\20210530-143800 --host localhost"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
