--- a/TensorBoard/tensorboardTest.ipynb
+++ b/TensorBoard/tensorboardTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "58e0498e",
+   "execution_count": 1,
+   "id": "2f34de6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "09079e23",
-   "metadata": {},
+   "execution_count": 3,
+   "id": "540a0483",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-2d6e6b4834b8ad80\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-d782797641465130\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-2d6e6b4834b8ad80\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d782797641465130\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -46,14 +48,24 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir logs"
+    "%tensorboard --logdir logs\\\\fit\\\\20210530161046 --host localhost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "db74acc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %reload_ext tensorboard"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
